sosmed/prod/fulldeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: sosmedprod
  namespace: production
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp-80
  selector:
      run: sosmedprod
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: sosmedprod
 namespace: production
spec:
  selector:
    matchLabels:
      run: sosmedprod
  replicas: 4
  template:
    metadata:
      labels:
        run: sosmedprod
    spec:
      containers:
      - name: sosmedprod
        image: rizalkemas68/sosmed:6.0
        ports:
          - containerPort: 80
        volumeMounts:
          - name: config-fb
            mountPath: "/srv/app/config.php"
            subPath: "config.php"
      volumes:
        - name: config-fb
          configMap:
            name: config-php
---
