sosmed/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sosmed-pesbuk
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp-80
  selector:
      run: sosmed-pesbuk
